# ECGMonitorApp

./: CMakeLists.txt  Jenkinsfile  README.md  demo.txt  run.sh  run_demo.sh
.github/workflows/: ci.yml  ci_linux.yml
include/: app_globl_state.hh  arg_parser.hh  controller.hh  file_writer.hh  ipc.hh  ipc_client.hh  ipc_packet_buffer.hh  ipc_server.hh  ipc_stack.hh  lineplot.hh  log.hh  observer.hh  receiver.hh  render_context.hh  render_target.hh  renderer.hh  sender.hh
ipc_proto/: ipc_proto.cc  ipc_proto.hh
ipc_sockets/: ipc_unix_socket.cc  ipc_unix_socket.hh
scripts/: todo.sh
services/: CMakeLists.txt
services/demo/: CMakeLists.txt  demo.cc  sig.txt
services/ecgmd/: CMakeLists.txt  comm.cc  comm.hh  ecgmd.cc  serial.cc  serial.hh
src/: app_globl_state.cc  arg_parser.cc  controller.cc  file_writer.cc  ipc_client.cc  ipc_packet_buffer.cc  ipc_server.cc  ipc_stack.cc  lineplot.cc  log.cc  main.cc  receiver.cc  render_context.cc  renderer.cc  sender.cc
tests/: CMakeLists.txt  ipc_proto_tests.cc  ipc_server_tests.cc  ipc_unix_socket_tests.cc  should_fail.cc
